validaçao de site

--- a/index.html
+++ b/index.html
@@ -16,5 +16,20 @@
         <h2>Meu segundo título</h2>
     </body>
 
+</header>
+      <h1>Meu Cabeçario</h1>
+</header>
+<section>
+    <article>
+        <H3>Moda Feminina</H3>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus natus quia sit, perferendis facere qui? Quisquam dolorum, quae iste odit, numquam expedita sunt hic tempore at tempora eos unde.
+        <footer>
+            QUAL QUER COISA
+        </footer>
+    </article>
+</section>
+<article>
+    
+</article>
 
 </html>
