--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--Link para folha de estilo-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/">
+        
+
+        <!--fontes-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     </head>
     <body>
