--- a/index.html
+++ b/index.html
@@ -31,26 +31,36 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aliquid rerum distinctio. Vel iusto molestiae cum ipsum dolores accusantium, iure earum dicta incidunt, deleniti eos fugit sequi illum! Consectetur, ducimus!
             </p>
         <h2>Meu Subtitulo</h2>
-            MODA
+            <p>MODA. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto debitis quibusdam expedita qui nostrum rerum ratione exercitationem voluptatem eum enim pariatur, omnis odio, sunt ullam possimus quidem quo incidunt?
+                </p>
         <header>
             <h2>Cabeçario da Seção</h2>
         </header>
 
 <section>
     <article>
+
         <h3>Moda Feminina</h3>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus natus quia sit, perferendis facere qui? Quisquam dolorum, quae iste odit, numquam expedita sunt hic tempore at tempora eos unde.
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus natus quia sit, perferendis facere qui? Quisquam dolorum, quae iste odit, numquam expedita sunt hic tempore at tempora eos unde.
+            </p>
+
         <footer>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit eveniet animi cupiditate ab minima ducimus necessitatibus. Ullam nobis quidem nostrum saepe voluptatem perferendis eligendi deleniti omnis mollitia odio. Nobis, similique!
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit eveniet animi cupiditate ab minima ducimus necessitatibus. Ullam nobis quidem nostrum saepe voluptatem perferendis eligendi deleniti omnis mollitia odio. Nobis, similique!
+                </p>
         </footer>
+
     </article>
     <h3>Moda Masculina</h3>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit atque ad maxime quaerat? Ipsam voluptatibus voluptates repellendus aliquam omnis at atque libero quam, quis molestias in. Aliquam repudiandae exercitationem est?
+    <p>ipsum, dolor sit amet consectetur adipisicing elit. Fugit atque ad maxime quaerat? Ipsam voluptatibus voluptates repellendus aliquam omnis at atque libero quam, quis molestias in. Aliquam repudiandae exercitationem est?
+        </p>
 </section>
+
 <article>
     <h3>Moda Infantil</h3>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos cumque asperiores repellendus facere ad, esse ipsa facilis sed commodi dolor deserunt aliquam veritatis dicta hic optio officiis deleniti recusandae ducimus.
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos cumque asperiores repellendus facere ad, esse ipsa facilis sed commodi dolor deserunt aliquam veritatis dicta hic optio officiis deleniti recusandae ducimus.
+        </p>
 </article>
+
     </body>
 
 </html>
