--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-    </head>
+</head>
     <body>
+        <section class="FASHION">
         <header>
             <h1>Meu cabeçario</h1>
             <p>Este site fala sobre moda e estilos de roupas femininas, masculinas e infantis.
@@ -33,12 +34,14 @@
         <h2>Meu Subtitulo</h2>
             <p>MODA. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto debitis quibusdam expedita qui nostrum rerum ratione exercitationem voluptatem eum enim pariatur, omnis odio, sunt ullam possimus quidem quo incidunt?
                 </p>
+
         <header>
             <h2>Cabeçario da Seção</h2>
         </header>
 
-<section>
-    <article>
+    <div class="FASHION__female">
+        <div> 
+  <article>
 
         <h3>Moda Feminina</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus natus quia sit, perferendis facere qui? Quisquam dolorum, quae iste odit, numquam expedita sunt hic tempore at tempora eos unde.
@@ -50,17 +53,27 @@
         </footer>
 
     </article>
-    <h3>Moda Masculina</h3>
-    <p>ipsum, dolor sit amet consectetur adipisicing elit. Fugit atque ad maxime quaerat? Ipsam voluptatibus voluptates repellendus aliquam omnis at atque libero quam, quis molestias in. Aliquam repudiandae exercitationem est?
-        </p>
-</section>
+        </div>
+       
+    </div>
+   
+
+    <div>  
+        <article> 
+             <h3>Moda Masculina</h3>
+    <p>ipsum, dolor sit amet consectetur adipisicing elit. Fugit atque ad maxime quaerat? Ipsam voluptatibus voluptates repellendus aliquam omnis at atque libero quam, quis molestias in. Aliquam repudiandae exercitationem est?</p>
+        </article>
+    </div>
+    
+
+
 
 <article>
     <h3>Moda Infantil</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos cumque asperiores repellendus facere ad, esse ipsa facilis sed commodi dolor deserunt aliquam veritatis dicta hic optio officiis deleniti recusandae ducimus.
         </p>
 </article>
-
+        </section>
     </body>
 
 </html>
