aula 2 html/css 16jun

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Cabeçario da Seção</h2>
         </header>
 
-    <div class="FASHION__female">
+    <div class="FASHION__female-p">
         <div> 
   <article>
 
@@ -57,7 +57,6 @@
        
     </div>
    
-
     <div>  
         <article> 
              <h3>Moda Masculina</h3>
@@ -65,9 +64,6 @@
         </article>
     </div>
     
-
-
-
 <article>
     <h3>Moda Infantil</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos cumque asperiores repellendus facere ad, esse ipsa facilis sed commodi dolor deserunt aliquam veritatis dicta hic optio officiis deleniti recusandae ducimus.
